# DelHel

./: .gitignore  CMakeLists.txt
.github/workflows/: release.yml
DelHel/: CDelHel.cpp  DelHel.rc  constants.h  helpers.cpp
